RESOLVED FIXED49251
Unused parameter warning causes JSC build failure with deviceorientation
https://bugs.webkit.org/show_bug.cgi?id=49251
Summary Unused parameter warning causes JSC build failure with deviceorientation
Steve Block
Reported 2010-11-09 06:15:11 PST
The warnings are due to the ExecState being unused in the JSDeviceMotionEvent and JSDeviceOrientationEvent getters after http://trac.webkit.org/changeset/70496
Attachments
Patch (2.81 KB, patch)
2010-11-09 06:20 PST, Steve Block
no flags
Steve Block
Comment 1 2010-11-09 06:20:17 PST
WebKit Commit Bot
Comment 2 2010-11-09 07:47:14 PST
Comment on attachment 73366 [details] Patch Clearing flags on attachment: 73366 Committed r71632: <http://trac.webkit.org/changeset/71632>
WebKit Commit Bot
Comment 3 2010-11-09 07:47:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.