2010-11-09  Steve Block  <steveblock@google.com>

Reviewed by Andreas Kling.

        Unused parameter warning causes JSC build failure with deviceorientation
        https://bugs.webkit.org/show_bug.cgi?id=49251

        No new tests, build fix only.

        * bindings/js/JSDeviceMotionEventCustom.cpp:
        (WebCore::JSDeviceMotionEvent::interval):
        * bindings/js/JSDeviceOrientationEventCustom.cpp:
        (WebCore::JSDeviceOrientationEvent::alpha):
        (WebCore::JSDeviceOrientationEvent::beta):
        (WebCore::JSDeviceOrientationEvent::gamma):

Canonical link: https://commits.webkit.org/62119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71632 268f45cc-cd09-0410-ab3c-d52691b4dbfc