WebCore/bindings/js/JSDeviceMotionEventCustom.cpp
@@ -153,7 +153,7 @@ JSValue JSDeviceMotionEvent::rotationRate(ExecState* exec) const
     return createRotationRateObject(imp->deviceMotionData()->rotationRate(), exec);
 }
 
-JSValue JSDeviceMotionEvent::interval(ExecState* exec) const
+JSValue JSDeviceMotionEvent::interval(ExecState*) const
 {
     DeviceMotionEvent* imp = static_cast<DeviceMotionEvent*>(impl());
     if (!imp->deviceMotionData()->canProvideInterval())
