WebCore/bindings/js/JSDeviceOrientationEventCustom.cpp
@@ -35,7 +35,7 @@ using namespace JSC;
 
 namespace WebCore {
 
-JSValue JSDeviceOrientationEvent::alpha(ExecState* exec) const
+JSValue JSDeviceOrientationEvent::alpha(ExecState*) const
 {
     DeviceOrientationEvent* imp = static_cast<DeviceOrientationEvent*>(impl());
     if (!imp->orientation()->canProvideAlpha())
@@ -43,7 +43,7 @@ JSValue JSDeviceOrientationEvent::alpha(ExecState* exec) const
     return jsNumber(imp->orientation()->alpha());
 }
 
-JSValue JSDeviceOrientationEvent::beta(ExecState* exec) const
+JSValue JSDeviceOrientationEvent::beta(ExecState*) const
 {
     DeviceOrientationEvent* imp = static_cast<DeviceOrientationEvent*>(impl());
     if (!imp->orientation()->canProvideBeta())
@@ -51,7 +51,7 @@ JSValue JSDeviceOrientationEvent::beta(ExecState* exec) const
     return jsNumber(imp->orientation()->beta());
 }
 
-JSValue JSDeviceOrientationEvent::gamma(ExecState* exec) const
+JSValue JSDeviceOrientationEvent::gamma(ExecState*) const
 {
     DeviceOrientationEvent* imp = static_cast<DeviceOrientationEvent*>(impl());
     if (!imp->orientation()->canProvideGamma())
